fin v1 siame projet

--- a/projet/src/app/connexion/connexion.component.scss
+++ b/projet/src/app/connexion/connexion.component.scss
@@ -1,6 +1,7 @@
  
 .img{
-background-image: url('./../../assets/images/fv.png');
+//background-image: url('./../../assets/images/fv.png');
+background-color: #03a9d3; 
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
