--- a/projet/src/app/config/config.component.html
+++ b/projet/src/app/config/config.component.html
@@ -2,11 +2,11 @@
   style="text-align: center;margin-top: 3%;margin-bottom: 6%; text-shadow: 2px 4px 3px rgba(0,0,0,0.3); font-size: 600%;">
   Configuration </h1>
 
-<div class="row col-md-12">
+<div class="row col-md-12 "  >
 
 
 
-  <div class="col-md-3  main-card mb-2 card " style="margin-left: 2%; margin-top: 1%;  height: 600px;   ">
+  <div class="col-md-3  main-card mb-2 card " style="margin-left: 2%; margin-top: 1%;    ">
      <input type="file" (change)="readof($event )">
 
     <div width="100%" style="text-align: center; margin-top: 6%;  ">
