--- a/projet/src/app/work/work.component.scss
+++ b/projet/src/app/work/work.component.scss
@@ -4,7 +4,7 @@
         #non-printable { display: none; }
         #printable { display: block; }
         body {
-            content:url('./../../assets/images/A60.svg');
+            content:url('./../../assets/images/A60 B22.svg');
            }
            * {
             -webkit-print-color-adjust: exact;
