--- a/projet/src/app/work/work.component.html
+++ b/projet/src/app/work/work.component.html
@@ -87,29 +87,29 @@
           <div id="printable" class=" row bc_image col-md-12">
                
               
-              <svg width="400px" height="170px" viewBox="0 0 1000 300">
+              <svg width="400px" height="220px" viewBox="0 0 1000 300">
         
-                 <text x="380" y="20" font-family="Verdana" font-size="35" font-weight="bold">
+                 <text x="380" y="0" font-family="Verdana" font-size="35" font-weight="bold">
                       Lampe LED : {{val_led}}  
                     </text>  
-                 <image [attr.xlink:href]="src_img" x="10" y="130" height="180px" width="250px" />
+                 <image [attr.xlink:href]="src_img" x="10" y="150" height="230px" width="250px" />
                 <g>
-                  <rect x="260" y="100" width="300" height="220" stroke="black" fill="transparent" stroke-width="4">
+                  <rect x="320" y="60" width="300" height="220" stroke="black" fill="transparent" stroke-width="4">
                   </rect>
-                  <text x="300" y="230" font-family="Verdana" font-size="50" font-weight="bold">{{val_w}}W</text>
+                  <text x="350" y="200" font-family="Verdana" font-size="90" font-weight="bold">{{val_w}}W</text>
                 </g>
                 <g>
-                  <rect x="600" y="130" width="290" height="120" stroke="black" fill="transparent" stroke-width="2">
+                  <rect x="640" y="100" width="290" height="120" stroke="black" fill="transparent" stroke-width="2">
                   </rect>
-                  <text x="630" y="210" font-family="Verdana" font-size="50">{{val_k}}K</text>
-                  <text x="600" y="320" font-family="Verdana" font-size="30">Qte : {{nb}}</text>
-                  <text x="98" y="360" font-family="Verdana" font-size="30" font-weight="bold"> {{val_e}}   </text>
+                  <text x="705" y="180" font-family="Verdana" font-size="50">{{val_k}}K</text>
+                  <text x="640" y="270" font-family="Verdana" font-size="30">Qte : {{nb}}</text>
+                  <text x="98" y="420" font-family="Verdana" font-size="30" font-weight="bold"> {{val_e}}   </text>
                 </g>  
               </svg>
               <div class="row"> 
-                <ngx-qrcode [value]="info" [width]="width_qr" style="display: inline; margin-left: 9%; margin-top: -165px;"></ngx-qrcode>
+                <ngx-qrcode [value]="info" [width]="width_qr" style="display: inline; margin-left: 9%; margin-top: -215px;"></ngx-qrcode>
                 <ngx-barcode [bc-value]="value_code" [bc-display-value]="true" [bc-width]="width" [bc-height]="height"
-                  style="display: inline; margin-left: 15%;"></ngx-barcode> 
+                  style="display: inline; margin-left: 25%; margin-top: -50px;"></ngx-barcode> 
             </div> 
               
             
