--- a/projet/src/app/config/config.component.html
+++ b/projet/src/app/config/config.component.html
@@ -17,22 +17,26 @@
       <table class="table table-striped ">
         <thead>
           <tr>
-            <th>Code FL</th>
             <th>Code OF</th>
+            <th>Code FL</th> 
+            <th>État</th>
             <th>E/100</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let obj of liste_of ">
             <td>
-              {{obj.code_fl}}
-            </td>
-            <td>
               {{obj.code_of}}
             </td>
             <td>
-              {{obj.e100}}
+              {{obj.code_fl}}
             </td>
+            <td>
+              {{obj.etat}}
+            </td>
+            <td>
+              {{obj.e100}}
+            </td> 
           </tr>
         </tbody>
 
@@ -52,7 +56,7 @@
           <th>code emballage </th>
           <th>Gamme</th>
           <th>Culot</th>
-          <th>Puissance</th>
+          <th>Pui</th>
           <th>couleur</th>
         
         </tr>
@@ -90,6 +94,8 @@
       <img src="./../../assets/images/users.png" width="200px" height="150px" />
 
     </div>
+    <button type="button" class="btn btn-success" (click) ="ajouter_agent()">Ajouter</button>
+
     <table class="table table-striped ">
       <thead>
         <tr> 
