--- a/projet/src/app/config/config.component.html
+++ b/projet/src/app/config/config.component.html
@@ -17,10 +17,10 @@
       <table class="table table-striped ">
         <thead>
           <tr>
-            <th>Code OF</th>
-            <th>Code FL</th> 
+            <th>N° OF</th>
+            <th>Code Article</th> 
             <th>État</th>
-            <th>E/100</th>
+            
           </tr>
         </thead>
         <tbody>
@@ -34,9 +34,7 @@
             <td>
               {{obj.etat}}
             </td>
-            <td>
-              {{obj.e100}}
-            </td> 
+             
           </tr>
         </tbody>
 
@@ -94,10 +92,10 @@
       <table class="table table-striped ">
         <thead>
           <tr>
-            <th>Code OF</th>
-            <th>Code FL</th> 
+            <th>N° OF</th>
+            <th>Code Article</th> 
             <th>État</th>
-            <th>E/100</th>
+             
           </tr>
         </thead>
         <tbody>
@@ -111,9 +109,7 @@
             <td>
               {{obj.etat}}
             </td>
-            <td>
-              {{obj.e100}}
-            </td> 
+            
           </tr>
         </tbody>
 
@@ -129,13 +125,12 @@
     <table class="table table-striped ">
       <thead>
         <tr> 
-          <th>Code Fl </th>
+          <th>Code Article </th>
           <th>code emballage </th>
           <th>Gamme</th>
           <th>Culot</th>
           <th>Pui</th>
           <th>couleur</th>
-        
         </tr>
       </thead>
       <tbody>
