--- a/projet/src/app/work/work.component.html
+++ b/projet/src/app/work/work.component.html
@@ -113,8 +113,8 @@
 
           </div>
           <div class="row " id="non-printable">
-            <button type="button" class="btn btn-success" (click)="imprimer_slodee()" style="margin-left: 10px;">Imprimer et Soldée OF</button>
-            <button *ngIf="(nb==0)||(nb==100)||(nb==10)" type="button" class="btn btn-danger"  (click)="slodee()"style="margin-left: 140px;">Soldée OF</button>
+            <button type="button" class="btn btn-success" (click)="imprimer_slodee()" style="margin-left: 10px;">Imprimer et Solder OF</button>
+            <button *ngIf="(nb==0)||(nb==100)||(nb==10)" type="button" class="btn btn-danger"  (click)="slodee()"style="margin-left: 140px;">Solder OF</button>
          
           </div>
 
