--- a/projet/src/app/config2/config2.component.html
+++ b/projet/src/app/config2/config2.component.html
@@ -1,11 +1,13 @@
-<img src="./../../assets/images/retour.png"  *ngIf="accees_admin" [routerLink]="['/menu']"width="50px" height="50px" style=" position:absolute; margin-left:2% ">
+<img src="./../../assets/images/retour.png"  *ngIf="accees_admin" [routerLink]="['/menu']" width="50px" height="50px" style=" position:absolute; margin-left:2% ">
 <img src="./../../assets/images/logout.png"   [routerLink]="['/']" width="50px" height="50px" style=" position:absolute;  margin-left: 94% ;">
 
 <h1 id="non-printable"
   style="text-align: center;margin-top: 3%;margin-bottom: 6%; text-shadow: 2px 4px 3px rgba(0,0,0,0.3); font-size: 400%;">
-  Configuration Lampe </h1>
- 
-<div class="row col-md-12 " *ngIf="!(accees_admin)"> 
+  Configuration Disjoncteur </h1>
+
+<div class="row col-md-12 " *ngIf="!(accees_admin)"  >
+
+
 
   <div class="col-md-5  main-card mb-2 card " style=" margin-top: 1%;    ">
     
@@ -30,7 +32,7 @@
               {{obj.code_of}}
             </td>
             <td>
-              {{obj.code_fl}}
+              {{obj.code}}
             </td>
             <td>
               {{obj.etat}}
@@ -86,8 +88,7 @@
      <input type="file" (change)="readof($event )">
 
     <div width="100%" style="text-align: center; margin-top: 6%;  ">
-
-      <img src="./../../assets/images/ordre.jpg" width="200px" height="150px"  (click) ="exporter()"/>
+      <img src="./../../assets/images/ordre.jpg" width="200px" height="150px" />
       </div>
       <button type="button" class="btn btn-success" (click) ="ajouter()">Ajouter</button>
 
@@ -106,7 +107,7 @@
               {{obj.code_of}}
             </td>
             <td>
-              {{obj.code_fl}}
+              {{obj.code}}
             </td>
             <td>
               {{obj.etat}}
@@ -128,32 +129,32 @@
       <thead>
         <tr> 
           <th>Code Article </th>
-          <th>code emballage </th>
+          <th>Résumé </th>
           <th>Gamme</th>
-          <th>Culot</th>
-          <th>Pui</th>
-          <th>couleur</th>
+          <th>Désignation</th>
+          <th>Qte_U</th>
+          <th>Qte_REG</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let obj of liste_produit">
           <td>
-            {{obj.codefl}}
+            {{obj.code}}
           </td>
           <td>
-            {{obj.code}}
+            {{obj.resume}}
           </td>
           <td>
             {{obj.gamme}}
           </td>
           <td>
-            {{obj.culot}}
+            {{obj.des}}
           </td>
           <td>
-            {{obj.puissance}}
+            {{obj.qte_u}}
           </td>
           <td>
-            {{obj.couleur}}
+            {{obj.qte_reg}}
           </td> 
         </tr>
       </tbody>
