--- a/projet/src/app/menu/menu.component.html
+++ b/projet/src/app/menu/menu.component.html
@@ -1,23 +1,25 @@
  
-   <h1 id="non-printable"
-   style="text-align: center;margin-top: 3%;margin-bottom: 3%; text-shadow: 2px 4px 3px rgba(0,0,0,0.3); font-size: 600%;">
-   Menu </h1>
- 
+    <img src="./../../assets/images/logout.png"   [routerLink]="['/']" width="50px" height="50px" style=" position:absolute;  margin-left: 94% ; margin-top: 2%;">
 
- <div class="row col-md-12" class="menu" style="margin-top: 10%;" >
-    
-     
-     
-    <div    class="col-md-3 inline"  >
-        <a (click)="config()"><img src="../../assets/images/config.png"  width="100%"/>
-            <h2>Configuration</h2>
-        </a>
-    </div>
-    <div class="col-md-3 inline" style=" margin-left: 10%; margin-top: 6%">
-        <a (click)="work()"><img src="../../assets/images/www.png" width="90%" />
-            <h2>Etiquetage</h2>
-        </a>
-    </div>
+  
+  <img src="./../../assets/images/SIAME.jpg" width="80%" height="50%" style="margin-left: 10%">
+
+
+<div>
+    <div class="menu" style="margin-top: 8%;">
+        <div class="inline">
+            <a routerLink="/config"><img src="../../assets/images/lamp.png"  style="margin-left: -90%;"/> 
+            </a>
+        </div>
+        <div class="inline">
+            <a routerLink="/config2"><img src="../../assets/images/breaker.png" style="margin-left: 0%;"/> 
+            </a>
+        </div>   
+    </div> 
+</div>
+
+  
+
    
  
  
