--- a/projet/src/app/work/work.component.html
+++ b/projet/src/app/work/work.component.html
@@ -1,6 +1,8 @@
 <h1 id="non-printable"
   style="text-align: center;margin-top: 3%;margin-bottom: 3%; text-shadow: 2px 4px 3px rgba(0,0,0,0.3); font-size: 600%;">
-  Etiquetage des produits </h1>
+  Lampe </h1>
+  <img src="./../../assets/images/logout.png"   [routerLink]="['/']" width="50px" height="50px" style=" position:absolute;  margin-left: 94% ; margin-top: -8%;">
+
 <div class="row">
 
   <div class="col-md-12">
@@ -70,7 +72,7 @@
         <div class="row">
           <div id="non-printable" class="col-md-12" style="margin-top: -5%;margin-bottom: 5%;">
             <div width="100%" style="text-align: center; margin-top: 1%;  ">
-              <img src="./../../assets/images/sess-save.png" width="50px" height="50px" />
+              <img src="./../../assets/images/sess-save.png"  [routerLink]="['/']"  width="50px" height="50px" />
               <h2>{{nom_agent}} </h2>
             </div>
           </div>
