--- a/projet/src/app/work2/work2.component.html
+++ b/projet/src/app/work2/work2.component.html
@@ -49,12 +49,13 @@
           <div class="col-md-11 main-card mb-2 card " style="margin-left: 2%;  margin-top: 1%;  " id="non-printable">
             Nombre Total des Cartons {{val_qte_reg}} est égale : {{nb_carton_10}}
             <div width="100%" style="text-align: center; margin-top: 6%; margin-bottom: 10%; ">
+              <img src="./../../assets/images/prdoduit.png" width="100px">
               <h1 style="color: red;">{{nb}}</h1>
             </div>
-            <h3> Résumé : {{val_resume }} </h3>
-            <h3> Gamme : {{ val_gamme}} </h3>
-            <h3> Désignation : {{val_des}}</h3>
-            <h3> Qte REG : {{val_qte_reg}} </h3>
+            <h4> Résumé : {{val_resume }} </h4>
+            <h4> Gamme : {{ val_gamme}} </h4>
+            <h4> Désignation : {{val_des}}</h4>
+            <h4> Qte REG : {{val_qte_reg}} </h4>
           </div>
         </div> 
       </div>
@@ -69,13 +70,13 @@
           <div id="printable" class=" row bc_image col-md-12"> 
             <svg width="400px" height="220px" viewBox="0 0 1000 300">
       
-              <text x="70" y="10" font-family="Verdana" font-size="70">  {{val_resume}} </text>
-              <text x="650" y="10" font-family="Verdana" font-size="70">   {{val_gamme}} </text>
-              <text x="290" y="240" font-family="Verdana" font-size="150" font-weight="bold" style="width: 100% ;text-align: center ;" >
+              <text x="70" y="0" font-family="Verdana" font-size="70">  {{val_resume}} </text>
+              <text x="650" y="0" font-family="Verdana" font-size="70">   {{val_gamme}} </text>
+              <text x="290" y="230" font-family="Verdana" font-size="150" font-weight="bold" style="width: 100% ;text-align: center ;" >
                   {{val_des}}
               </text>
-              <text x="650" y="400" font-family="Verdana" font-size="70">
-                Qté : {{val_qte_reg}}
+              <text x="650" y="390" font-family="Verdana" font-size="70">
+                Qté : {{nb}}
               </text>               
             </svg>
             <div class="row"> 
