--- a/projet/src/app/work2/work2.component.html
+++ b/projet/src/app/work2/work2.component.html
@@ -48,14 +48,14 @@
 
           <div class="col-md-11 main-card mb-2 card " style="margin-left: 2%;  margin-top: 1%;  " id="non-printable">
             Nombre Total des Cartons {{val_qte_reg}} est égale : {{nb_carton_10}}
-            <div width="100%" style="text-align: center; margin-top: 6%; margin-bottom: 10%; ">
-              <img src="./../../assets/images/prdoduit.png" width="100px">
-              <h1 style="color: red;">{{nb}}</h1>
+            <div class="row" width="100%" style="text-align: center; margin-top: 6%; margin-bottom: 10%; ">
+              <div class="col-md-5">   <img src="./../../assets/images/prdoduit.png" width="200px" style="margin-top: 20%;">   </div>
+              <div class="col-md-7">  <h1 style="color: red; font-size: 300px;  margin-top: 40%; ">{{nb}}</h1>  </div>
+
             </div>
-            <h4> Résumé : {{val_resume }} </h4>
-            <h4> Gamme : {{ val_gamme}} </h4>
-            <h4> Désignation : {{val_des}}</h4>
-            <h4> Qte REG : {{val_qte_reg}} </h4>
+            <button type="button" style="margin-top: 3%;" class="btn btn-primary btn-sm">Correction </button>
+
+         
           </div>
         </div> 
       </div>
